Update multiple components and add testimonials section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="assets/images/abhay.jpg" />
     <title>Abhay Chaurasia - Full Stack Developer Portfolio</title>
     <meta name="description" content="Abhay Chaurasia - Full Stack Developer specializing in MERN stack, TypeScript, and modern web development. B.Tech CSE student at IET Khandari Agra." />
     <meta name="author" content="Abhay Chaurasia" />
@@ -12,11 +13,11 @@
     <meta property="og:title" content="Abhay Chaurasia - Full Stack Developer Portfolio" />
     <meta property="og:description" content="Full Stack Developer specializing in MERN stack, TypeScript, and modern web development" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="assets/images/abhay.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="assets/images/abhay.jpg" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
