adding resume router

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="assets/images/abhay.jpg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.ytimg.com/vi/IBPs5P27gmI/oardefault.jpg?sqp=-oaymwEkCJUDENAFSFqQAgHyq4qpAxMIARUAAAAAJQAAyEI9AICiQ3gB&rs=AOn4CLBp1-ZBIVwAk0p2hg8dXnBAYpNM5A" />
     <title>Abhay Chaurasia - Full Stack Developer Portfolio</title>
     <meta name="description" content="Abhay Chaurasia - Full Stack Developer specializing in MERN stack, TypeScript, and modern web development. B.Tech CSE student at IET Khandari Agra." />
     <meta name="author" content="Abhay Chaurasia" />
